Fixes for readability.js

--- a/astro_site/src/styles/_recipe.scss
+++ b/astro_site/src/styles/_recipe.scss
@@ -215,7 +215,7 @@
 			li {
 				counter-increment: steps;
 				display: grid;
-				grid-template-columns: 1.4rem 1.5rem 1fr;
+				grid-template-columns: 1.4rem 1fr;
 				align-items: start;
 				gap: 0.5rem;
 				padding: 0.65rem 0;
